--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,7 @@ serde_json = "1.0.68"
 reqwest = { version = "0.12.3", features = ["json", "blocking"] }
 color-eyre = "0.6.3"
 clippy = { version = "0.0.302", optional = true }
+tui-textarea = "*"
+anyhow = "1.0.81"
+oauth2 = "4.4.2"
+tokio = { version = "1.16.1", features = ["full"] }
