--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,6 +26,8 @@ jobs:
         with:
           files: |
             target/release/sitzungsverwaltung_amd64
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
 
   build-win:
     runs-on: windows-latest
@@ -49,6 +51,8 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: target/release/sitzungsverwaltung.exe
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
 
   build-mac:
     runs-on: macos-latest
@@ -74,4 +78,6 @@ jobs:
         with:
           files: |
             target/release/sitzungsverwaltung_darwin
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
 
