--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -81,3 +81,29 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ github.token }}
 
+  build-arm:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+
+      - name: Install latest rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: aarch64-unknown-linux-gnu
+          default: true
+          override: true
+
+      - name: Build for arm
+        run: cargo build --all --release && strip target/release/sitzungsverwaltung && mv target/release/sitzungsverwaltung target/release/sitzungsverwaltung_arm
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            target/release/sitzungsverwaltung_arm
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
