--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -95,7 +95,7 @@ jobs:
           targets: aarch64-unknown-linux-gnu
 
       - name: Install compiler tools (as we're cross-compiling)
-        run: sudo apt install -y gcc-aarch64-linux-gnu pkg-config openssl
+        run: sudo apt install -y gcc-aarch64-linux-gnu pkg-config libssl-dev
 
       - name: Setup caching
         uses: Swatinem/rust-cache@v2
