--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -102,6 +102,8 @@ jobs:
 
       - name: Build release artifact
         run: cargo build --all --release --target aarch64-unknown-linux-gnu && strip target/release/sitzungsverwaltung && mv target/release/sitzungsverwaltung target/release/sitzungsverwaltung_arm
+        env:
+          CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: "aarch64-linux-gnu-gcc"
 
       - name: Release
         uses: softprops/action-gh-release@v1
