--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -4,7 +4,6 @@ on: [push]
 
 jobs:
   build:
-    name: Build - ${{ matrix.target }}
     strategy:
       matrix:
         platform:
@@ -15,7 +14,8 @@ jobs:
           - os: macos-latest
             target: apple-darwin
         arch: [x86_64, aarch64]
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.platform.os }}
+    name: Build - ${{ matrix.platform.target }}
     steps:
       - name: Checkout
         uses: actions/checkout@v1
@@ -29,9 +29,9 @@ jobs:
 
       - name: Build
         run: |
-          cargo build --all --release --target ${{ arch }}-${{ matrix.target }}
+          cargo build --all --release --target ${{ matrix.arch }}-${{ matrix.platform.target }}
           strip target/release/sitzungsverwaltung
-          mv target/release/sitzungsverwaltung target/release/sitzungsverwaltung-${{ matrix.target }}
+          mv target/release/sitzungsverwaltung target/release/sitzungsverwaltung-${{ matrix.platform.target }}
         env:
           CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: "aarch64-linux-gnu-gcc"
 
@@ -40,7 +40,7 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            target/release/sitzungsverwaltung-${{ matrix.target }}
+            target/release/sitzungsverwaltung-${{ matrix.platform.target }}
         env:
           GITHUB_TOKEN: ${{ github.token }}
 
