--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,7 +15,7 @@ jobs:
             target: apple-darwin
         arch: [x86_64, aarch64]
     runs-on: ${{ matrix.platform.os }}
-    name: Build - ${{ matrix.platform.target }}
+    name: Build - ${{ matrix.arch }}-${{ matrix.platform.target }}
     steps:
       - name: Checkout
         uses: actions/checkout@v1
@@ -23,6 +23,7 @@ jobs:
       - name: Install latest rust toolchain
         uses: actions-rs/toolchain@v1
         with:
+          targets: ${{ matrix.arch}}-${{ matrix.platform.target }}
           toolchain: stable
           default: true
           override: true
