--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install latest rust toolchain
         uses: actions-rs/toolchain@v1
         with:
-          targets: ${{ matrix.arch}}-${{ matrix.platform.target }}
+          target: ${{ matrix.arch}}-${{ matrix.platform.target }}
           toolchain: stable
           default: true
           override: true
